test/errors/shadow_self2.sl
# expect: COMPERROR
# self should not be allowed to be shadowed

auto fn = () -> none {
    auto self = 1;
};
